@@ -1,3 +1,8 @@
+2010-05-19  Carsten Dominik  <carsten.dominik@gmail.com>
+
+	* org-table.el (org-table-align): Fix alignment of strings
+	with invisible characters.
+
 2010-05-17  Carsten Dominik  <carsten.dominik@gmail.com>
 
 	* org.el (org-refile-use-cache): New option.
